{
  "version": 4,
  "terraform_version": "1.3.4",
  "serial": 50,
  "lineage": "015abf8c-d34d-be28-467a-177e96703753",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc_peering_connection",
      "name": "accepter",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accepter": {
              "allow_classic_link_to_remote_vpc": false,
              "allow_remote_vpc_dns_resolution": false,
              "allow_vpc_to_remote_classic_link": false
            },
            "cidr_block": "10.10.0.0/16",
            "cidr_block_set": [
              {
                "cidr_block": "10.10.0.0/16"
              }
            ],
            "id": "pcx-00120d17a1f78a554",
            "owner_id": "479111403931",
            "peer_cidr_block": "10.0.0.0/16",
            "peer_cidr_block_set": [
              {
                "cidr_block": "10.0.0.0/16"
              }
            ],
            "peer_owner_id": "829250931565",
            "peer_region": "us-east-1",
            "peer_vpc_id": "vpc-012e13eeb630066e5",
            "region": "us-east-1",
            "status": "active",
            "vpc_id": "vpc-0b99e2c714bb09ae2"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:829250931565:internet-gateway/igw-0d7816028321ebd20",
            "id": "igw-0d7816028321ebd20",
            "owner_id": "829250931565",
            "tags": {
              "Name": "cflt-demo-da1590ce"
            },
            "tags_all": {
              "Name": "cflt-demo-da1590ce"
            },
            "vpc_id": "vpc-012e13eeb630066e5"
          },
          "dependencies": [
            "aws_vpc.main",
            "random_id.vpc_display_id"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "r",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.10.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-010a0d899dc4b4a8b519371977",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-010a0d899dc4b4a8b",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-00120d17a1f78a554"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_route_table.route_table",
            "confluent_network.peering",
            "data.aws_vpc_peering_connection.accepter"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:829250931565:route-table/rtb-010a0d899dc4b4a8b",
            "id": "rtb-010a0d899dc4b4a8b",
            "owner_id": "829250931565",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d7816028321ebd20",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "cflt-demo-da1590ce"
            },
            "tags_all": {
              "Name": "cflt-demo-da1590ce"
            },
            "timeouts": null,
            "vpc_id": "vpc-012e13eeb630066e5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main",
            "random_id.vpc_display_id"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet_associations",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06fb99b37b2555635",
            "route_table_id": "rtb-010a0d899dc4b4a8b",
            "subnet_id": "subnet-00c9e06540917d182"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.route_table",
            "aws_subnet.public_subnets",
            "aws_vpc.main",
            "random_id.vpc_display_id"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08edfd6aa6f949951",
            "route_table_id": "rtb-010a0d899dc4b4a8b",
            "subnet_id": "subnet-05a306ba13c629d92"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.route_table",
            "aws_subnet.public_subnets",
            "aws_vpc.main",
            "random_id.vpc_display_id"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d2e4bbaf44276445",
            "route_table_id": "rtb-010a0d899dc4b4a8b",
            "subnet_id": "subnet-0303b0b4a5d8fa176"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.route_table",
            "aws_subnet.public_subnets",
            "aws_vpc.main",
            "random_id.vpc_display_id"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:829250931565:subnet/subnet-00c9e06540917d182",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00c9e06540917d182",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "829250931565",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cflt-demo-0-da1590ce"
            },
            "tags_all": {
              "Name": "cflt-demo-0-da1590ce"
            },
            "vpc_id": "vpc-012e13eeb630066e5"
          },
          "dependencies": [
            "aws_vpc.main",
            "random_id.vpc_display_id"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:829250931565:subnet/subnet-05a306ba13c629d92",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05a306ba13c629d92",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "829250931565",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cflt-demo-1-da1590ce"
            },
            "tags_all": {
              "Name": "cflt-demo-1-da1590ce"
            },
            "vpc_id": "vpc-012e13eeb630066e5"
          },
          "dependencies": [
            "aws_vpc.main",
            "random_id.vpc_display_id"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:829250931565:subnet/subnet-0303b0b4a5d8fa176",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0303b0b4a5d8fa176",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "829250931565",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cflt-demo-2-da1590ce"
            },
            "tags_all": {
              "Name": "cflt-demo-2-da1590ce"
            },
            "vpc_id": "vpc-012e13eeb630066e5"
          },
          "dependencies": [
            "aws_vpc.main",
            "random_id.vpc_display_id"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:829250931565:vpc/vpc-012e13eeb630066e5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-029eda460b09689f7",
            "default_route_table_id": "rtb-06e59c4f34d709a8a",
            "default_security_group_id": "sg-075079291718fc6bc",
            "dhcp_options_id": "dopt-338dd34b",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-012e13eeb630066e5",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06e59c4f34d709a8a",
            "owner_id": "829250931565",
            "tags": {
              "Name": "cflt-demo-da1590ce"
            },
            "tags_all": {
              "Name": "cflt-demo-da1590ce"
            }
          },
          "dependencies": [
            "random_id.vpc_display_id"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_peering_connection_accepter",
      "name": "peer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "accepter": [
              {
                "allow_classic_link_to_remote_vpc": false,
                "allow_remote_vpc_dns_resolution": false,
                "allow_vpc_to_remote_classic_link": false
              }
            ],
            "auto_accept": true,
            "id": "pcx-00120d17a1f78a554",
            "peer_owner_id": "479111403931",
            "peer_region": "us-east-1",
            "peer_vpc_id": "vpc-0b99e2c714bb09ae2",
            "vpc_id": "vpc-012e13eeb630066e5",
            "vpc_peering_connection_id": "pcx-00120d17a1f78a554"
          },
          "dependencies": [
            "aws_vpc.main",
            "confluent_environment.staging",
            "confluent_network.peering",
            "confluent_peering.aws",
            "data.aws_vpc_peering_connection.accepter",
            "random_id.env_display_id",
            "random_id.vpc_display_id"
          ]
        }
      ]
    }
  ]
}